# Chat-Room

./: .gitignore  CONFIGURATION_SYSTEM_VERIFICATION_REPORT.md  GITIGNORE_README.md  LICENSE  Makefile  README.md  check_server_status.py  debug_chat_group_sync.py  debug_chat_manager.py  debug_chatclient_simple.py  debug_database_messages.py  debug_database_schema.py  debug_network_communication.py  debug_permission_issue.py  debug_server_history_loading.py  debug_simple_history.py  debug_user_session_issue.py  demo.py  demo_ai_features.py  demo_todo_features.py  diagnose_connection.py  main.py  package.json  pyproject.toml  reproduce_permission_issue.py  requirements.txt  run_ui.py  server_deployment_guide.md  simple_debug_test.py  simple_test.py  test_ai_improvements.py  test_basic_isolation.py  test_chat_switching_fix.py  test_client_config.py  test_complete_system.py  test_end_to_end_history_loading.py  test_file.txt  test_file_download.py  test_final_integration.py  test_handler_call.py  (+17 more)
client/: __init__.py  main.py
config/: client_config.yaml  server_config.template.yaml  server_config.yaml
demo/: admin_demo.py  ai_trigger_demo.py  demo.py  demo_ai_features.py  demo_config_modification.py  demo_todo_features.py
docs/: AI_Function_Usage_Guide.md  AI_Integration_Guide.md  AI_Permission_Fix_Report.md  Analysis_Summary.md  CODE_OPTIMIZATION_SUMMARY.md  Configuration_Guide.md  Critical_Issues_Fix_Report.md  Design-v03.md  Development.md  File_Transfer_Fix_Summary.md  File_Transfer_Fixed_Usage_Guide.md  File_Transfer_Implementation_Summary.md  ProjectSummary.md  (+43 more)
(+285 files in other folders)
